--- a/Aprendo con Molly/colores.xaml
+++ b/Aprendo con Molly/colores.xaml
@@ -184,6 +184,7 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+		<Style x:Key="marron" TargetType="{x:Type Button}"/>
 	</Window.Resources>
 	<Window.Effect>
 		<DropShadowEffect Color="#FF32911D" Direction="200" Opacity="0.75"/>
@@ -259,27 +260,7 @@
 				</LinearGradientBrush>
 			</Rectangle.Fill>
 		</Rectangle>
-		<Button x:Name="blanco" Content="Button" HorizontalAlignment="Left" Height="78.28" Margin="260,136.72,0,0" VerticalAlignment="Top" Width="86" Template="{DynamicResource BotonColor}"/>
-		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="214,35.72,0,0" VerticalAlignment="Top" Width="86">
-			<Button.Background>
-				<ImageBrush ImageSource="amarillo.png"/>
-			</Button.Background>
-		</Button>
-		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="348,35.72,0,0" VerticalAlignment="Top" Width="86">
-			<Button.Background>
-				<ImageBrush TileMode="FlipX" ImageSource="naranja.png"/>
-			</Button.Background>
-		</Button>
-		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="478,35.72,0,0" VerticalAlignment="Top" Width="86">
-			<Button.Background>
-				<ImageBrush ImageSource="rojo.png"/>
-			</Button.Background>
-		</Button>
-		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="604.102,35.72,0,0" VerticalAlignment="Top" Width="86">
-			<Button.Background>
-				<ImageBrush ImageSource="rosa.png"/>
-			</Button.Background>
-		</Button>
+		<Button x:Name="btnBlanco" Content="Button" HorizontalAlignment="Left" Height="78.28" Margin="260,136.72,0,0" VerticalAlignment="Top" Width="86" Template="{DynamicResource BotonColor}"/>
 		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="720,35.72,0,0" VerticalAlignment="Top" Width="86">
 			<Button.Background>
 				<ImageBrush ImageSource="verde.png"/>
@@ -290,16 +271,11 @@
 				<ImageBrush ImageSource="azul.png"/>
 			</Button.Background>
 		</Button>
-		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="396,136.72,0,0" VerticalAlignment="Top" Width="86">
-			<Button.Background>
-				<ImageBrush ImageSource="marron.png"/>
-			</Button.Background>
-		</Button>
-		<Button Content="" HorizontalAlignment="Left" Height="78.28" Margin="516,141.72,0,0" VerticalAlignment="Top" Width="86">
-			<Button.Background>
-				<ImageBrush ImageSource="negro.png"/>
-			</Button.Background>
-		</Button>
-		<Button Content="Button" HorizontalAlignment="Left" Height="80.28" Margin="134,134.72,0,0" Style="{DynamicResource botonNaranja}" VerticalAlignment="Top" Width="92"/>
+		<Button x:Name="btnNaranja" Content="Button" HorizontalAlignment="Left" Height="80.28" Margin="134,134.72,0,0" Style="{DynamicResource botonNaranja}" VerticalAlignment="Top" Width="92"/>
+		<Button x:Name="btnAmarillo" Content="Button" HorizontalAlignment="Left" Height="78.28" Margin="134,35.72,0,0" Style="{DynamicResource btnAmarillo}" VerticalAlignment="Top" Width="92"/>
+		<Button Content="Button" HorizontalAlignment="Left" Height="80.28" Margin="260,33.72,0,0" Style="{DynamicResource rojo}" VerticalAlignment="Top" Width="86"/>
+		<Button x:Name="btnMarron" Content="Button" HorizontalAlignment="Left" Height="78.28" Margin="392,35.72,0,0" Style="{DynamicResource marrons}" VerticalAlignment="Top" Width="83.102"/>
+		<Button Content="Button" HorizontalAlignment="Left" Height="78.28" Margin="392,141.72,0,0" Style="{DynamicResource negro}" VerticalAlignment="Top" Width="83.102"/>
+		<Button Content="Button" HorizontalAlignment="Left" Height="78.28" Margin="518,35.72,0,0" Style="{DynamicResource rosa}" VerticalAlignment="Top" Width="83.102"/>
 	</Grid>
 </Window>
