--- a/Aprendo con Molly/jUGADORES.xaml
+++ b/Aprendo con Molly/jUGADORES.xaml
@@ -6,7 +6,7 @@
 	x:Class="Aprendo_con_Molly.jUGADORES"
 	x:Name="Window"
 	Title="JUGADORES"
-	Width="1006" Height="614" ResizeMode="NoResize" Icon="pack://siteoforigin:,,,/Molly.ico" WindowStartupLocation="CenterScreen" WindowState="Maximized" Background="Transparent" WindowStyle="None" HorizontalAlignment="Center" VerticalAlignment="Center" AllowsTransparency="True">
+	Width="1006" Height="614" ResizeMode="NoResize" Icon="pack://siteoforigin:,,,/Molly.ico" WindowStartupLocation="CenterScreen" WindowState="Maximized" Background="Transparent" WindowStyle="None" HorizontalAlignment="Center" VerticalAlignment="Center" AllowsTransparency="True" KeyDown="Window_KeyDown">
 	<Window.Resources>
 		<ControlTemplate x:Key="textBoxRedondeado" TargetType="{x:Type TextBox}">
 			<Grid>
@@ -240,7 +240,7 @@
 					</TransformGroup>
 				</Label.RenderTransform>
 			</Label>
-			<Button x:Name="btnSiguiente" Content="NEXT" HorizontalAlignment="Left" Height="127.682" Margin="27.909,214.318,0,0" Style="{DynamicResource comenzR}" VerticalAlignment="Top" Width="153.834" Click="btnSiguiente_Click" FontFamily="Cooper Black" FontSize="26.667" FontWeight="Bold" Foreground="#FF238755" IsCancel="True" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Padding="1" FlowDirection="RightToLeft" Cursor="Hand"/>
+			<Button x:Name="btnSiguiente" Content="NEXT" HorizontalAlignment="Left" Height="127.682" Margin="27.909,214.318,0,0" Style="{DynamicResource comenzR}" VerticalAlignment="Top" Width="153.834" Click="btnSiguiente_Click" FontFamily="Cooper Black" FontSize="26.667" FontWeight="Bold" Foreground="#FF238755" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Padding="1" FlowDirection="RightToLeft" Cursor="Hand" Focusable="False" IsDefault="True"/>
 		</Grid>
 		<Grid x:Name="NIVELES" HorizontalAlignment="Left" Height="348.5" Margin="370.502,189.5,0,0" VerticalAlignment="Top" Width="258.5" Opacity="0" Visibility="Hidden">
 			<Label Content="NIVELES" HorizontalAlignment="Left" Margin="37.164,34.861,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.059,1.213" Width="210.041" HorizontalContentAlignment="Center" FontFamily="Cooper Black" FontSize="26.667" Foreground="#FF269C7C" FontWeight="Bold">
@@ -253,14 +253,14 @@
 					</TransformGroup>
 				</Label.RenderTransform>
 			</Label>
-			<RadioButton x:Name="rdbBajo" Content="BAJO" Margin="93.167,103.166,92.5,220.667" FontFamily="Cooper Black" FontWeight="Bold" FontSize="16"/>
-			<RadioButton x:Name="rdbMedio" Content="MEDIO" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="95.834" FontFamily="Cooper Black" FontWeight="Bold" FontSize="16" Margin="93.167,127.833,0,0"/>
-			<RadioButton x:Name="rdbAlto" Content="ALTO" Margin="93.167,155.833,92.5,168" FontFamily="Cooper Black" FontWeight="Bold" FontSize="16"/>
-			<Button x:Name="btnSiguiente_Copy" Content="NEXT" HorizontalAlignment="Left" Height="132.015" Margin="61.908,210.818,0,0" Style="{DynamicResource comenzR}" VerticalAlignment="Top" Width="153.834" Click="btnSiguiente_Click" FontFamily="Cooper Black" FontSize="26.667" FontWeight="Bold" Foreground="#FF238755" IsCancel="True" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Padding="1" FlowDirection="RightToLeft"/>
+			<RadioButton x:Name="rdbBajo" Content="BAJO" Margin="93.167,103.166,92.5,220.667" FontFamily="Cooper Black" FontWeight="Bold" FontSize="16" Focusable="False"/>
+			<RadioButton x:Name="rdbMedio" Content="MEDIO" HorizontalAlignment="Left" Height="28" VerticalAlignment="Top" Width="95.834" FontFamily="Cooper Black" FontWeight="Bold" FontSize="16" Margin="93.167,127.833,0,0" Focusable="False"/>
+			<RadioButton x:Name="rdbAlto" Content="ALTO" Margin="93.167,155.833,92.5,168" FontFamily="Cooper Black" FontWeight="Bold" FontSize="16" Focusable="False"/>
+			<Button x:Name="btnSiguiente_Copy" Content="NEXT" HorizontalAlignment="Left" Height="132.015" Margin="61.908,210.818,0,0" Style="{DynamicResource comenzR}" VerticalAlignment="Top" Width="153.834" Click="btnSiguiente_Click" FontFamily="Cooper Black" FontSize="26.667" FontWeight="Bold" Foreground="#FF238755" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Padding="1" FlowDirection="RightToLeft" Focusable="False" IsDefault="True" Cursor="Hand"/>
 		</Grid>
-		<Button Content="Button" HorizontalAlignment="Left" Height="23.72" Margin="944.833,10,0,0" Style="{DynamicResource BotonCerrar}" VerticalAlignment="Top" Width="25.011" Cursor="Hand" Click="Button_Click"/>
-		<Button Content="Button" HorizontalAlignment="Left" Height="23.72" Margin="914.822,10,0,0" Style="{DynamicResource Minimizar}" VerticalAlignment="Top" Width="25.011" Cursor="Hand" Click="Button_Click_1"/>
-		<ed:Callout x:Name="bocadillo" AnchorPoint="0.885,1.94" Content="¡DIME COMO TE LLAMAS!" FontSize="14.667" HorizontalAlignment="Left" Height="130.008" Margin="629.002,103.419,0,0" StrokeThickness="8" VerticalAlignment="Top" Width="212.982" FontFamily="Cooper Black" CalloutStyle="Oval">
+		<Button Content="Button" HorizontalAlignment="Left" Height="23.72" Margin="944.833,10,0,0" Style="{DynamicResource BotonCerrar}" VerticalAlignment="Top" Width="25.011" Cursor="Hand" Click="Button_Click" Focusable="False"/>
+		<Button Content="Button" HorizontalAlignment="Left" Height="23.72" Margin="914.822,10,0,0" Style="{DynamicResource Minimizar}" VerticalAlignment="Top" Width="25.011" Cursor="Hand" Click="Button_Click_1" Focusable="False"/>
+		<ed:Callout x:Name="bocadillo" AnchorPoint="0.885,1.94" Content="¡DIME COMO TE LLAMAS!" FontSize="14.667" HorizontalAlignment="Left" Height="130.008" Margin="629.002,103.419,0,0" StrokeThickness="8" VerticalAlignment="Top" Width="212.982" FontFamily="Cooper Black" CalloutStyle="Oval" Focusable="False">
 			<ed:Callout.Fill>
 				<RadialGradientBrush Center="106.491,65.004" GradientOrigin="106.491,65.004" MappingMode="Absolute" RadiusY="65.004" RadiusX="106.491">
 					<GradientStop Color="#BFF0FFBF" Offset="0.424"/>
@@ -293,7 +293,7 @@
 					</TransformGroup>
 				</Rectangle.RenderTransform>
 			</Rectangle>
-			<Rectangle x:Name="imgDcha" RadiusY="48" RadiusX="48" StrokeThickness="8" RenderTransformOrigin="0.5,0.5" Height="193.031" Canvas.Left="236.637" Canvas.Top="3.363" Width="127" Fill="#FFFBF5F5">
+			<Rectangle x:Name="imgDcha" RadiusY="48" RadiusX="48" StrokeThickness="8" RenderTransformOrigin="0.5,0.5" Height="193.031" Canvas.Left="236.637" Canvas.Top="3.363" Width="127" Fill="#FFF9F3F3">
 				<Rectangle.Effect>
 					<DropShadowEffect Color="#FF528911" Direction="200"/>
 				</Rectangle.Effect>
@@ -319,8 +319,8 @@
 					</TransformGroup>
 				</Rectangle.RenderTransform>
 			</Rectangle>
-			<Button Content="Button" Height="79.5" Canvas.Left="36.258" Style="{DynamicResource btnAnterior}" Canvas.Top="300.069" Width="68.583"/>
-			<Button Content="Button" Height="79.5" Canvas.Left="271.145" Style="{DynamicResource dcha}" Canvas.Top="300.069" Width="68.583"/>
+			<Button Content="Button" Height="79.5" Canvas.Left="36.258" Style="{DynamicResource btnAnterior}" Canvas.Top="300.069" Width="68.583" Click="Button_Click_3" Focusable="False" IsTabStop="False"/>
+			<Button Content="Button" Height="79.5" Canvas.Left="271.145" Style="{DynamicResource dcha}" Canvas.Top="300.069" Width="68.583" Click="Button_Click_2" Focusable="False" IsTabStop="False"/>
 		</Canvas>
 	</Grid>
 </Window>
