--- a/Aprendo con Molly/App.xaml
+++ b/Aprendo con Molly/App.xaml
@@ -2,7 +2,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	x:Class="Aprendo_con_Molly.App"
-	StartupUri="Inicio.xaml">
+	StartupUri="colores.xaml">
 	<Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -291,7 +291,7 @@
 					<Setter.Value>
 						<ControlTemplate TargetType="{x:Type Button}">
 							<Grid x:Name="grid">
-								<Rectangle x:Name="btnNegro" Stroke="Black">
+								<Rectangle x:Name="btnNegro" Stroke="Transparent">
 									<Rectangle.Fill>
 										<ImageBrush ImageSource="negro.png"/>
 									</Rectangle.Fill>
@@ -302,7 +302,7 @@
 								<Trigger Property="IsFocused" Value="True"/>
 								<Trigger Property="IsDefaulted" Value="True"/>
 								<Trigger Property="IsMouseOver" Value="True">
-									<Setter Property="Margin" TargetName="grid" Value="-10,-8,0,0"/>
+									<Setter Property="Margin" TargetName="grid" Value="0,-1,0,0"/>
 								</Trigger>
 								<Trigger Property="IsPressed" Value="True"/>
 								<Trigger Property="IsEnabled" Value="False"/>
@@ -328,6 +328,250 @@
 								<Trigger Property="IsDefaulted" Value="True"/>
 								<Trigger Property="IsMouseOver" Value="True">
 									<Setter Property="Margin" TargetName="grid" Value="-10,-11,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnNegro" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="negro.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnBlanco" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Grid.Background>
+									<ImageBrush/>
+								</Grid.Background>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="blanco.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnMarron" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="marron.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnRosa" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="rosa.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnRojo" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="rojo.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnAzul" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Grid.Background>
+									<ImageBrush/>
+								</Grid.Background>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="azul.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnVerde" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Grid.Background>
+									<ImageBrush/>
+								</Grid.Background>
+								<Rectangle x:Name="rectangle" RadiusY="0" RadiusX="0" StrokeThickness="8">
+									<Rectangle.Fill>
+										<ImageBrush ImageSource="verde.png"/>
+									</Rectangle.Fill>
+								</Rectangle>
+								<ContentPresenter x:Name="contentPresenter" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="0" Width="92" Height="80.28"/>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Width" TargetName="contentPresenter" Value="105"/>
+									<Setter Property="Height" TargetName="contentPresenter" Value="103.28"/>
+									<Setter Property="Margin" TargetName="contentPresenter" Value="-13,-23,0,0"/>
+									<Setter Property="Margin" TargetName="rectangle" Value="-13,-23,0,0"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="btnEscuchar" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid x:Name="grid">
+								<Label x:Name="label" Content="ESCUCHAR" Foreground="#FF7C3800" FontWeight="Bold" FontSize="21.333" FontFamily="Cooper BLACK" RenderTransformOrigin="0.5,0.5" Margin="3.333,13.333,-3.333,-13.333">
+									<Label.RenderTransform>
+										<TransformGroup>
+											<ScaleTransform/>
+											<SkewTransform/>
+											<RotateTransform Angle="-19.425"/>
+											<TranslateTransform/>
+										</TransformGroup>
+									</Label.RenderTransform>
+								</Label>
+								<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="" Margin="-4.639,-13.068,-5.306,-14.067" RenderTransformOrigin="0.5,0.5" Width="147.333" Height="60.961">
+									<ContentPresenter.RenderTransform>
+										<TransformGroup>
+											<ScaleTransform ScaleX="-1"/>
+											<SkewTransform/>
+											<RotateTransform/>
+											<TranslateTransform/>
+										</TransformGroup>
+									</ContentPresenter.RenderTransform>
+								</ContentPresenter>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Margin" TargetName="grid" Value="-1,-17,0,-16"/>
 								</Trigger>
 								<Trigger Property="IsPressed" Value="True"/>
 								<Trigger Property="IsEnabled" Value="False"/>
